spelling and citations

--- a/cms_description.tex
+++ b/cms_description.tex
@@ -62,7 +62,8 @@ measuring the momentum, and is defined as $p_{T} = |p|\cos{\phi}$.
     is measured in the tracker; electrons and photons deposit most of
     their energy in the ECAL; charged and neutral hadrons deposit most
   of their energy in the HCAL; the muon chambers measures the
-  trajectory of muons or long-lived charged particles} \label{fig:cms_slice}
+  trajectory of muons or long-lived charged particles
+  \cite{CMS:CMS_slice}.} \label{fig:cms_slice}
 \end{figure}
 
 \par CMS is composed of a system of sub-detectors, each
@@ -141,14 +142,14 @@ accumulated damage.
   is a silicon strip detector, with four concentric rings.  The
   tracker inner disks (TID) are three layers deep.  The tracker outer
   barrel (TOB) is six concentric rings and the tracker end caps (TEC)
-  are nine layers deep. } \label{fig:tracker_side}
+  are nine layers deep \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:tracker_side}
 \end{figure}
 
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.5\textwidth]{Figures/CMS_Diagrams/Tracker__Barrel_View.pdf}
   \caption{A head-on view of the beam-line and barrel components of the
-  tracker.} \label{fig:tracker_barrel}
+  tracker \cite{CMS:tracker_pixels_xsec}.} \label{fig:tracker_barrel}
 \end{figure}
 
 \par The tracker has a cylindrical shape that surrounds the interaction 
@@ -181,7 +182,7 @@ e$^{+}$e$^{-}$ pairs.
    \centering
   \includegraphics[width=0.8\textwidth]{Figures/CMS_Diagrams/Tracker__Pixel_Rapidity.png}
   \caption{The three barrel and two disk layers of the silicon pixel
-    tracker provide coverage of $|\eta|<2.5$ } \label{fig:tracker_pixel_eta_coverage}
+    tracker provide coverage of $|\eta|<2.5$ \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:tracker_pixel_eta_coverage}
 \end{figure}
 
 \par The pixel detector consists of 66 million 100$\times$150 $\mu$m
@@ -216,7 +217,7 @@ pixels are angled 20$^{\circ}$ in the $\hat{y}$ direction.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.8\textwidth]{Figures/CMS_Diagrams/Tracker__Pixel_Readout.pdf}
-  \caption{The readout electronics chain for the pixel detector} \label{fig:tracker_pixel_readout}
+  \caption{The readout electronics chain for the pixel detector \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:tracker_pixel_readout}
 \end{figure}
 
 
@@ -244,7 +245,7 @@ read-out chain.
   \caption{In 2012 $pp$ collisions at $\sqrt{s}=8 \TeV$, the pixel
     detector performed with a resolution of 11.8 $\mu$m.  The above
     is a plot of the residual difference between a pixel and the
-    results of a fit to a particle track.} \label{fig:tracker_pixel_resolution}
+    results of a fit to a particle track \cite{CMS:tracker_pixels_resolution}.} \label{fig:tracker_pixel_resolution}
 \end{figure}
 
 \par The resolution of the pixel detector was measured in 2012 with
@@ -261,7 +262,8 @@ pixel detector was found to have a spatial resolution of 11.8 $\mu$m.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/Tracker__Silicon_Strip_Module.pdf}
-  \caption{A silicon strip module, with two 500 $\mu$m thick sensors.} \label{fig:tracker_strip_module}
+  \caption{A silicon strip module, with two 500 $\mu$m thick sensors
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:tracker_strip_module} 
 \end{figure}
 
 \par As shown in figure \ref{fig:tracker_side}, the silicon strip
@@ -313,7 +315,7 @@ collected and processed through the read-out system.
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/Tracker__Silicon_Strip_Readout.pdf}
   \caption{Schematic of the readout sequence of the silicon strip
-    detector.} \label{fig:tracker_strip_readout}
+    detector \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:tracker_strip_readout}
 \end{figure}
 
 \par A custom integrated circuit, the APV25, is used to amplify,
@@ -332,13 +334,14 @@ figure \ref{fig:tracker_strip_readout}.
     \begin{subfigure}[h]{0.450\textwidth}
         \includegraphics[width=\textwidth]{Figures/CMS_Diagrams/Tracker__Strip_HitRes.pdf}
         \caption{Measurement of the resolution on charged particle
-          tracks in the TIB and TOB}\label{fig:tracker_strip_hitRes}
+          tracks in the TIB and TOB \cite{CMS:tracker_strip_efficiency}.}\label{fig:tracker_strip_hitRes}
       \end{subfigure}
       ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
       % (or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[h]{0.450\textwidth}
         \includegraphics[width=\textwidth]{Figures/CMS_Diagrams/Tracker__Strip_efficiency_end2010.png}
-        \caption{Strip tracker efficiency for identifying charged tracks}\label{fig:tracker_strip_efficiency}
+        \caption{Strip tracker efficiency for identifying charged
+          tracks \cite{CMS:tracker_strip_resolution}}\label{fig:tracker_strip_efficiency}
       \end{subfigure}
       \caption{Measurements of the performance of the silicon strip
         track using $pp$ collisions from 2011 at $\sqrt{s}=7 \TeV$}\label{fig:tracker_strip_performance}
@@ -360,7 +363,7 @@ which is well above 99$\%$ when only considering operational modules.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/ECAL__Layout.pdf}
-  \caption{Layout of the ECAL sub-detector} \label{fig:ecal_layout}
+  \caption{Layout of the ECAL sub-detector \cite{CMS:CMS_Machine_Chatrchyan:2008aa}} \label{fig:ecal_layout}
 \end{figure}
 
 \par The \acrfull{ecal} surrounds the inner tracker with 61,200 high
@@ -383,7 +386,7 @@ detectors, similar to those in the tracker. Figure
   \includegraphics[width=0.9\textwidth]{Figures/CMS_Diagrams/ECAL__Xtal.pdf}
   \caption{Typical Lead Tungstate crystal, with APD attached to the
     rear face in the left frame, and a VPT attached in the right
-    frame. } \label{fig:ecal_xtals}
+    frame \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:ecal_xtals}
 \end{figure}
 
 \par Lead tungstate is in ideal material for electromagnetic
@@ -406,7 +409,8 @@ stored as data or discarded.
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/ECAL__shower_simulation.pdf}
   \caption{A simulation of the evolution of a electromagnetic shower
-    being initiated by an electron entering the center of the front face. } \label{fig:ecal_shower}
+    being initiated by an electron entering the center of the front
+    face \cite{CMS:ecal_crystal_shower_simulation}. } \label{fig:ecal_shower}
 \end{figure}
 
 \par As a charged particle or photon begins to deposit energy, it
@@ -439,7 +443,8 @@ produced by an electron entering the front face of a crystal.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/ECAL__Xtal_Module.pdf}
-  \caption{A module of 500 crystals (25 crystals wide by 20 crystal tall). } \label{fig:ecal_xtal_module}
+  \caption{A module of 500 crystals (25 crystals wide by 20 crystal
+    tall) \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:ecal_xtal_module}
 \end{figure}
 
 \par The barrel of ECAL (EB) covers a psuedorapidity range of
@@ -473,7 +478,8 @@ throughout the barrel and end-caps.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.75\textwidth]{Figures/CMS_Diagrams/ECAL__OnDetectorReadOut.pdf}
-  \caption{Schematic of the On-Detector Readout for the ECAL } \label{fig:ecal_readout}
+  \caption{Schematic of the On-Detector Readout for the ECAL
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:ecal_readout} 
 \end{figure}
 
 \par The ECAL readout electronics are designed to read-out a 5$\times$5
@@ -519,7 +525,8 @@ form a disk with a hole for the beam-line to pass through.
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/ECAL__EndCap_Dee.pdf}
   \caption{A section of the ECAL end-cap, a Dee.  Two Dees form a disk
   with an inner bore for the beam-line to pass through.  5x5 modules,
-  or supercrystals, are mounted in preparation for installation at CMS} \label{fig:ecal_endcap_dee}
+  or supercrystals, are mounted in preparation for installation at CMS
+\cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:ecal_endcap_dee}
 \end{figure}
 
 \par Behind the preshower is the ECAL end-cap (EE).  It covers the
@@ -539,15 +546,17 @@ partial-supercrystals for the inner and outer sections of the Dee.
     \centering
     \begin{subfigure}[h]{0.450\textwidth}
         \includegraphics[width=\textwidth]{Figures/CMS_Diagrams/ECAL__VPT.pdf}
-        \caption{A picture of a VPT next to a standard size pen for scale}\label{fig:ecal_vpt_pic}
+        \caption{A picture of a VPT next to a standard size pen for
+          scale \cite{CMS:ecal_vpt_with_pen}}\label{fig:ecal_vpt_pic}
       \end{subfigure}
       ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
       % (or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[h]{0.450\textwidth}
         \includegraphics[width=\textwidth]{Figures/CMS_Diagrams/ECAL__VPT_schematic.pdf}
-        \caption{Schematic of a VPT showing characteristic dimensions}\label{fig:ecal_vpt_schematic}
+        \caption{Schematic of a VPT showing characteristic dimensions \cite{Brown:2001ia}}\label{fig:ecal_vpt_schematic}
       \end{subfigure}
-      \caption{Vacuum Photo-Triode devices used in the ECAL end-caps (EE)}\label{fig:ecal_vpt}
+      \caption{Vacuum Photo-Triode devices used in the ECAL end-caps
+        (EE)}\label{fig:ecal_vpt}
 \end{figure}
 
 \par The photomultiplier used to readout the lead tungstate crystals in
@@ -819,7 +828,7 @@ Average  & 52.0 & 1.08e+01 & 3.72e-10 & 2.03e-10 & -1.15e-03 & 2.11e-10 & -8.10e
    \centering
   \includegraphics[width=0.9\textwidth]{Figures/CMS_Diagrams/HCAL__Layout.pdf}
   \caption{Longitudinal cross-section of the HCAL with the four
-    sub-systems labeled} \label{fig:hcal_layout}
+    sub-systems labeled \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:hcal_layout}
 \end{figure}
 
 \par The \acrfull{hcal} is is divided into four sub-systems: the
@@ -838,7 +847,7 @@ section is shown in figure \ref{fig:hcal_layout}.
     each of the 18 wedges are labeled, optical cables lay across the
     joint of the center and staggered edge sections of each wedge.
     The blue lines show the approximate azimuthal division of the
-    wedge.} \label{fig:hcal_hb_wedge}
+    wedge \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:hcal_hb_wedge}
 \end{figure}
 
 \par The barrel section of the HCAL, the HB, is divided into two
@@ -856,7 +865,7 @@ highlight the four azimuthal divisions for a single wedge.
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/HCAL__NavyShells.jpg}
   \caption{Over 1 million Russian shells of military artillery were
-    re-processed in the construction of the HCAL} \label{fig:hcal_navy_shells}
+    re-processed in the construction of the HCAL \cite{CMS:hcal_russian_shells}} \label{fig:hcal_navy_shells}
 \end{figure}
 
 \par The HB is a sampling calorimeter, with each azimuthal section
@@ -877,7 +886,8 @@ posing with some of the shells.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/HCAL__OpticalReadout.pdf}
-  \caption{Optical readout chain of the HCAL scintillator tiles} \label{fig:hcal_navy_shells}
+  \caption{Optical readout chain of the HCAL scintillator tiles
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:hcal_navy_shells}
 \end{figure}
 
 \par When a hadron passes through a wedge, the brass and steel plates
@@ -923,7 +933,7 @@ absorber.
    \centering
   \includegraphics[width=0.7\textwidth]{Figures/CMS_Diagrams/HCAL__Endcap.pdf}
   \caption{HCAL endcap, 18 azimuthal divisions of alternating layers
-    of brass and plastic scintillator.} \label{fig:hcal_endcap}
+    of brass and plastic scintillator \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:hcal_endcap}
 \end{figure}
 
 \par The endcap system, the HE, provide a substantial portion of the total
@@ -941,7 +951,7 @@ endcap before being installed.
    \centering
   \includegraphics[width=0.8\textwidth]{Figures/CMS_Diagrams/HCAL__HF_layout.pdf}
   \caption{Longitudinal cross-section of the HCAL forward calorimetry,
-  the HF} \label{fig:hcal_hf_layout}
+  the HF \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:hcal_hf_layout}
 \end{figure}
 
 \par The forward calorimetry, HF, extends the HCAL coverage from
@@ -1006,7 +1016,7 @@ from $1.4<|\eta|<2.4$.
   \caption{Longitudinal cross-section of one of the 5 wheels of the
     muon system.  Drift tubes are placed in 4 concentric layers, with
     2 being placed inside the return yoke of the magnet, and 12
-    azimuthal divisions.} \label{fig:muon_dt_layout}
+    azimuthal divisions \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:muon_dt_layout}
 \end{figure}
 
 \begin{figure}[h]
@@ -1014,7 +1024,7 @@ from $1.4<|\eta|<2.4$.
   \includegraphics[width=0.85\textwidth]{Figures/CMS_Diagrams/Muon__DT_cell.pdf}
   \caption{A cross-section view of a drift cell.  The anode wire is
     held at 3600 V, creating a potential difference with the walls.
-    Electric field lines are shown in blue.} \label{fig:muon_dt_cell}
+    Electric field lines are shown in blue \cite{CMS:CMS_Machine_Chatrchyan:2008aa}.} \label{fig:muon_dt_cell}
 \end{figure}
 
 \par The DTs are located in the MB system, which is divided into 5
@@ -1058,7 +1068,7 @@ walls of the drift cell.
         \caption{A longitudinal cross-section of the muon barrel RPC
           system.  RPCs are attached to the top and bottom of the
           first two layers of drift stations, and to the bottom of the
-        outer two layers}\label{fig:muon_rpc_barrel_layout}
+        outer two layers \cite{CMS:CMS_Machine_Chatrchyan:2008aa}}\label{fig:muon_rpc_barrel_layout}
       \end{subfigure}
       ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
       % (or a blank line to force the subfigure onto a new line)
@@ -1066,7 +1076,8 @@ walls of the drift cell.
         \includegraphics[width=\textwidth]{Figures/CMS_Diagrams/Muon__RPC_endcap_layout.pdf}
         \caption{Cross-section of muon endcap system.  It is composed
           of three disks, with RPCs mounted on the back of CSC system
-          on the first and last disks, and on the front of the CSC in the middle disk}\label{fig:muon_rpc_endcap_layout}
+          on the first and last disks, and on the front of the CSC in
+          the middle disk \cite{CMS:CMS_Machine_Chatrchyan:2008aa}}\label{fig:muon_rpc_endcap_layout}
       \end{subfigure}
       \caption{RPC layout for the barrel and endcaps}\label{fig:muon_rpc_layout}
 \end{figure}
@@ -1074,7 +1085,7 @@ walls of the drift cell.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Muon__RPC_schematic.jpg}
-  \caption{Exploded diagram of an RPC} \label{fig:muon_rpc}
+  \caption{Exploded diagram of an RPC \cite{CMS:muon_rpc_image}} \label{fig:muon_rpc}
 \end{figure}
 
 \par The resistive place chambers (RPCs) are the fast timing system
@@ -1105,7 +1116,8 @@ endcap.
    \centering
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Muon__Endcap_CSC_layout.pdf}
   \caption{Cross-section of one quarter of the muon endcap system,
-    with the 4 disks of CSC systems shown in red} \label{fig:muon_csc_layout}
+    with the 4 disks of CSC systems shown in red
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:muon_csc_layout}
 \end{figure}
 
 \begin{figure}[h]
@@ -1113,7 +1125,8 @@ endcap.
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Muon__CSC.pdf}
   \caption{A CSC station with 7 layers, making 6 gas chambers.
     Cathode strips are shown in yellow, perpendicular to the vertical
-    anode wires in orange. } \label{fig:muon_csc_layout}
+    anode wires in orange
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:muon_csc_layout} 
 \end{figure}
 
 \par In addition to RPCs, the muon endcap (ME) system, uses cathode
@@ -1158,7 +1171,8 @@ manageable 100 Hz.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Trigger__L1_layout.pdf}
-  \caption{A block diagram of the L1 trigger}\label{fig:tigger_L1_layout}
+  \caption{A block diagram of the L1 trigger
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}}\label{fig:tigger_L1_layout} 
 \end{figure}
 
 \par The L1 trigger is composed of local, regional, and global
@@ -1190,7 +1204,8 @@ exception of the HF, which is formed by a single trigger tower.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Trigger__RCT_schematic.pdf}
-  \caption{A schematic of the $e/\gamma$ trigger algorithm} \label{fig:tigger_rct_algo}
+  \caption{A schematic of the $e/\gamma$ trigger algorithm
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}. } \label{fig:tigger_rct_algo}
 \end{figure}
 
 \par The RCT determines electron and photon candidates from the
@@ -1243,7 +1258,8 @@ system.
 \begin{figure}[h]
    \centering
   \includegraphics[width=0.6\textwidth]{Figures/CMS_Diagrams/Trigger__DAQ_layout.pdf}
-  \caption{Layout of the CMS DAQ} \label{fig:tigger_daq}
+  \caption{Layout of the CMS DAQ
+    \cite{CMS:CMS_Machine_Chatrchyan:2008aa}} \label{fig:tigger_daq} 
 \end{figure}
 
 \par The CMS DAQ collects information from 626 sub-detector Front End
