spelling and citations

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1209,6 +1209,68 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
 }
 
+@misc{CMS:CMS_slice,
+      title        = "Image, CMS, Static Slice with tracks",
+      note         = "URL~\url{https://cms-docdb.cern.ch/cgi-bin/PublicDocDB/RetrieveFile?docid=4172&version=2&filename=CMS_Slice.gif}",
+}
+
+@misc{CMS:tracker_pixels_xsec,
+      title        = "Image, CMS, Tracker cross-section",
+      note         = "URL~\url{http://cms.web.cern.ch/sites/cms.web.cern.ch/files/styles/small/public/field/image/Barrel.gif?itok=dc1cYUp-}",
+}
+
+@misc{CMS:tracker_pixels_resolution,
+      title        = "Image, CMS, Tracker Pixel Resolution",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/pub/CMSPublic/PixelOfflinePlots2013/207487_h420.png}",
+}
+
+@misc{CMS:tracker_strip_efficiency,
+      title        = "Image, CMS, Tracker Strip Efficiency",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/pub//CMSPublic/DPGResultsTRK/efficiency_end2010.png}",
+}
+
+@misc{CMS:tracker_strip_resolution,
+      title        = "Image, CMS, Tracker Strip Resolution",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/pub//CMSPublic/DPGResultsTRK/StripHitRes2.gif}",
+}
+
+@misc{CMS:ecal_crystal_shower_simulation,
+      title        = "Image, CMS, ECAL crystal shower evolution simulation",
+      note         = "URL~\url{http://www.lepp.cornell.edu/rsrc/Home/Research/CMS/EventReconstruction/fe24elwhite_small.gif}",
+}
+
+@misc{CMS:ecal_vpt_with_pen,
+      title        = "Image, CMS, ECAL VPT with pen for scale",
+      note         = "URL~\url{http://hepwww.rl.ac.uk/CMSecal/Meetings/2005/VPT_RIE_front.jpg}",
+}
+
+@article{Brown:2001ia,
+      author         = "Brown, Robert M. and Bell, Kenneth Watson and Cockerill,
+                        D.J.A. and Flower, P.S. and Kennedy, B.W. and others",
+      title          = "{The vacuum phototriodes for the CMS electromagnetic
+                        calorimeter}",
+      journal        = "PoS",
+      volume         = "HEP2001",
+      pages          = "255",
+      year           = "2001",
+      SLACcitation   = "%%CITATION = POSCI,HEP2001,255;%%",
+}
+
+@misc{CMS:hcal_russian_shells,
+      title        = "Image, CMS, HCAL built from Russian naval shells",
+      note         = "URL~\url{http://cms.web.cern.ch/sites/cms.web.cern.ch/files/styles/small/public/field/image/navy-shells-image_0095.jpg?itok=OtSvdvLx}",
+}
+
+@misc{CMS:muon_rpc_image,
+      title        = "Image, CMS, Muon chamber RPCs, exploded view",
+      note         = "URL~\url{http://cms.web.cern.ch/sites/cms.web.cern.ch/files/styles/small/public/field/image/RPClayers.jpg?itok=qtLqtQ89}",
+}
+
+@misc{CMS:ECAL_ledPulsing,
+      title        = "Image, CMS, ECAL LED pulsing calibration results",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/pub//CMSPublic/EcalDPGResultsCMSDP2013007/histories_2011-2012.png}",
+}
+
 @techreport{CMS-PAS-PFT-09-001,
       title         = "{Particle-Flow Event Reconstruction in CMS and Performance
                        for Jets, Taus, and MET}",
@@ -1334,6 +1396,27 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       year          = "2010",
 }
 
+@article{CMS:2010zta,
+      key            = "925287",
+      title          = "{Electromagnetic calorimeter calibration with 7 TeV
+                        data}",
+      collaboration  = "CMS",
+      year           = "2010",
+      reportNumber   = "CMS-PAS-EGM-10-003",
+      SLACcitation   = "%%CITATION = CMS-PAS-EGM-10-003 ETC.;%%",
+}
+
+@misc{CMS:Ele_particleFlow_commissioning,
+      title        = "Image, CMS, Electron Partlicle-Flow Commissioning",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/EGMElectronsMoriond2010}",
+}
+
+@misc{CMS:Muon_particleFlow_commissioning,
+      title        = "Image, CMS, Muon Partlicle-Flow Commissioning",
+      note         = "URL~\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsMUO}",
+}
+
+
 @article{Adam:2005bya,
       author         = "Adam, Wolfgang and Frühwirth, R. and Strandlie, Are and
                         Todor, T.",
@@ -1368,6 +1451,12 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       number        = "CMS-PAS-PFT-10-002",
       year          = "2010",
 }
+
+@misc{CMS:BTaggingCartoon,
+      title        = "Image, b-Tagging",
+      note         = "URL~\url{http://www-d0.fnal.gov/Run2Physics/top/singletop_observation/b_tagging_graphic.png}",
+}
+
 
 @article{Agashe:2014kda,
       author         = "Olive, K.A. and others",
@@ -1467,6 +1556,12 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       year           = "1979",
       reportNumber   = "CALT-68-678",
       SLACcitation   = "%%CITATION = NUPHA,B149,413;%%",
+}
+
+@misc{ANN_basic_image,
+      title = {Image, basic ANN},
+      howpublished = {\url{http://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Colored_neural_network.svg/300px-Colored_neural_network.svg.png
+}}
 }
 
 @misc{JESJetMET,
