spelling and citations

--- a/reconstruction.tex
+++ b/reconstruction.tex
@@ -140,7 +140,8 @@ HE\cite{Chatrchyan:1223950}.
    \centering
   \includegraphics[width=0.9\textwidth]{Figures/Reconstruction_Diagrams/ECAL_intercalibration_combined_methods.pdf}
   \caption{Results of the uncertainty on the ECAL intercalibration
-    coefficients for the barrel (left) and endcaps (right)} \label{fig:ecal_intercal}
+    coefficients for the barrel (left) and endcaps (right)
+    \cite{Chatrchyan:1554142}. } \label{fig:ecal_intercal}
 \end{figure}
 
 \par After an initial set of data collection three independent
@@ -176,7 +177,7 @@ intercalibration coefficients.
   \caption{Instantaneous luminosity response to the crystals as measured
     by the laser and LED system.  Additional crystal calibration
     constants are derived to normalize the crystal response over the
-    range of collected data} \label{fig:ecal_laser}
+    range of collected data \cite{CMS:ECAL_ledPulsing}} \label{fig:ecal_laser}
 \end{figure}
 
 \par The ECAL also has a strong dependence on the rate of
@@ -196,7 +197,7 @@ described above.
   \includegraphics[width=0.9\textwidth]{Figures/Reconstruction_Diagrams/HCAL_calibration_chi2_fit_from_ecal.pdf}
   \caption{Results of using a $\chi^{2}$ minimization procedure to
     estimate the neutral hadron energy contribution in the HCAL using
-    simulated events} \label{fig:hcal_calibration}
+    simulated events\cite{CMS-PAS-PFT-09-001}} \label{fig:hcal_calibration}
 \end{figure}
 
 \par The performance of the HCAL calibration to the 50 GeV pion beam is
@@ -289,7 +290,7 @@ cells that the muon traverses.
         \includegraphics[width=\textwidth]{Figures/Reconstruction_Diagrams/MUO__JPsi40pb-1.pdf}
         \caption{Reconstructed J$\Psi$ mass peak from di-muon events
           in 7 TeV data, used to commission low \PT muons reconstructed
-        with the particle flow algorithm}\label{fig:muon_jpsi_mass}
+        with the particle flow algorithm \cite{CMS:Muon_particleFlow_commissioning}. }\label{fig:muon_jpsi_mass}
       \end{subfigure}
       ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
       % (or a blank line to force the subfigure onto a new line)
@@ -298,7 +299,7 @@ cells that the muon traverses.
         \caption{Transverse mass peak of $W$ boson events
           reconstructed from single muon events in 7 TeV data, used to
         commission high \PT muons reconstructed with the particle flow
-      algorithm}\label{fig:muon_w_mass}
+      algorithm \cite{CMS:Muon_particleFlow_commissioning}. }\label{fig:muon_w_mass}
       \end{subfigure}
       \caption{Muon validation plots for the particle-flow reconstruction}\label{fig:muon_pf_validation}
 \end{figure}
@@ -338,7 +339,8 @@ as a "particle-flow electron''.
         \includegraphics[width=\textwidth]{Figures/Reconstruction_Diagrams/ELE__jpsi_tk_35invpb.png}
         \caption{Reconstructed J$\Psi$ mass peak from di-electron events
           in 7 TeV data, used to commission low \PT electrons reconstructed
-        with the particle flow algorithm}\label{fig:ele_jpsi_mass}
+        with the particle flow algorithm
+        \cite{CMS:Ele_particleFlow_commissioning}. }\label{fig:ele_jpsi_mass}
       \end{subfigure}
       ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
       % (or a blank line to force the subfigure onto a new line)
@@ -347,7 +349,7 @@ as a "particle-flow electron''.
         \caption{Transverse mass peak of $W$ boson events
           reconstructed from single electron events in 7 TeV data, used to
         commission high \PT electrons reconstructed with the particle flow
-      algorithm}\label{fig:ele_w_mass}
+      algorithm \cite{CMS:2010zta}}\label{fig:ele_w_mass}
       \end{subfigure}
       \caption{Electron validation plots for the particle-flow reconstruction}\label{fig:ele_pf_validation}
 \end{figure}
@@ -419,7 +421,7 @@ algorithm.
    \centering
   \includegraphics[width=0.8\textwidth]{Figures/Reconstruction_Diagrams/Jets__AntiKt_Algo.pdf}
   \caption{The anti-kt jet clustering algorithm with distance
-    parameter R=1.0} \label{fig:antiKt}
+    parameter R=1.0 \cite{Cacciari:2008gp}} \label{fig:antiKt}
 \end{figure}
 
 \par The algorithm proceeds by looping over all of the particle-flow
@@ -446,7 +448,8 @@ harder \PT objects can be seen at $\phi=5, y=2$.
   \includegraphics[width=0.8\textwidth]{Figures/Reconstruction_Diagrams/Jets__PFChargedHadronCalibration.pdf}
   \caption{Commissioning of the particle-flow algorithm on jets,
     involved comparing the energy measured from charged hadron tracks,
-  to energy measured in calorimeter clusters linked to the tracks} \label{fig:chargedHadron_calib}
+  to energy measured in calorimeter clusters linked to the tracks
+  \cite{CMS-PAS-PFT-10-002}. } \label{fig:chargedHadron_calib}
 \end{figure}
 
 \par In 2010, the particle-flow algorithm for jet reconstruction was
@@ -500,7 +503,8 @@ can used to easily identify if it came from prompt decay or not.
   \includegraphics[width=0.6\textwidth]{Figures/Reconstruction_Diagrams/Jets__bTagging.pdf}
   \caption{A $b$-meson will travel a distance L$_{xy}$ before decaying
   and creating a secondary vertex.  The impact parameter, d$_{0}$
-  measures the longitudinal displacement of the two vertices} \label{fig:bTagging}
+  measures the longitudinal displacement of the two vertices
+  \cite{CMS:BTaggingCartoon}. } \label{fig:bTagging}
 \end{figure}
 
 \par The most important characteristic of the $b$-quark is its
